spacing fixes

--- a/src/components/menu.css
+++ b/src/components/menu.css
@@ -5,6 +5,7 @@
   left: 50%;
   text-shadow: 0px 0px 20px rgb(255,255,255), 0px 0px 20px rgb(255,255,255);
   text-align: center;
+  padding-bottom: 30px;
 }
 
 header h1 {
